tests/ui/pattern/deref-patterns/typeck_fail.stderr
error[E0308]: mismatched types
  --> $DIR/typeck_fail.rs:7:9
   |
LL |     match Some(0) {
   |           ------- this expression has type `Option<{integer}>`
LL |         Ok(0) => {}
   |         ^^^^^ expected `Option<{integer}>`, found `Result<_, _>`
   |
   = note: expected enum `Option<{integer}>`
              found enum `Result<_, _>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
